--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Movopfy</string>
-    <string name="text_waiting_today_home_screen">Расписание на сегодня</string>
+    <string name="schedule_for_today_text">Расписание на сегодня</string>
 </resources>
