home_screen, navigation, kinopoiskApi, mapperAnilibriaUrl: changed, added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Movopfy</string>
-    <string name="schedule_for_today_text">Расписание на сегодня</string>
+
+    <string name="schedule_for_today_text">Ожидается сегодня</string>
+
+    <string name="more_movies_button">Ещё</string>
 </resources>
