anime_screen: added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="schedule_for_today_text">Ожидается сегодня</string>
 
     <string name="more_movies_button">Ещё</string>
+
+    <string-array name="day_list">
+        <item>Понедельник</item>
+        <item>Вторник</item>
+        <item>Среда</item>
+        <item>Четверг</item>
+        <item>Пятница</item>
+        <item>Суббота</item>
+        <item>Восресенье</item>
+    </string-array>
 </resources>
