--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
         <item>Суббота</item>
         <item>Восресенье</item>
     </string-array>
+
+    <string name="play_anime_button">Начать просмотр</string>
 </resources>
