detail screen: added episodes list, removed top bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     </string-array>
 
     <string name="play_anime_button">Начать просмотр</string>
+
+    <string name="episode_anime_list">Серия %1$s %2$s</string>
 </resources>
