details screen: fixed ui; top bar: removed icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
 
     <string name="play_anime_button">Начать просмотр</string>
 
-    <string name="episode_anime_list">Серия %1$s %2$s</string>
+    <string name="episode_anime_list">Серия %1$s</string>
 
     <string name="favourite_item_is_watched">Просмотрено</string>
 
