--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
 
     <string name="episode_anime_list">Серия %1$s</string>
 
-    <string name="favourite_item_is_watched">Просмотрено</string>
-
     <string name="favourite_item_remove">Remove from favourite</string>
+
+    <string name="placeholder_search_text">Search</string>
 </resources>
