--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="favourite_is_empty">You don\'t have any favorites yet</string>
 
     <string name="placeholder_search_text">Search</string>
+
+    <string name="auth_welcome">Welcome</string>
+    <string name="auth_email_placeholder">Email</string>
+    <string name="auth_password_placeholder">Password</string>
+    <string name="auth_continue_button">Continue</string>
 </resources>
