--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,10 @@
     <string name="auth_welcome">Welcome</string>
     <string name="auth_email_placeholder">Email</string>
     <string name="auth_password_placeholder">Password</string>
-    <string name="auth_continue_button">Continue</string>
+
+    <string name="create_user_button">Create account</string>
+    <string name="sign_in_user_button">SignIn</string>
+
+    <string name="create_user_text">Or Create Account</string>
+    <string name="sign_in_user_text">Or Sign in Account</string>
 </resources>
